# Ironbullet

./: .gitignore  Cargo.toml  QUICK_START.md  README.md  build.rs  start.sh
.github/actions/linux-build/: action.yml
.github/workflows/: docs.yml  linux.yml  windows-release.yml
docs/: README.md  architecture-restructure-plan.md
docs/media/: README.md
docs/site/: astro.config.mjs  index.html  package-lock.json  package.json
docs/site/src/components/: BlockContractPlayground.astro  BlockPlayground.astro
docs/site/src/content/docs/: capability-status.md  contributing.md  embedded-values.md  getting-started.md  http-requests.md  index.mdx  interface-tour.md  parsing-and-checks.md  pipeline-model.md
docs/site/src/content/docs/blocks/: browser.md  bypass.md  checks.md  checks.mdx  control.md  filesystem.md  functions.md  index.md  parsing.md  parsing.mdx  requests.md  requests.mdx  security.md  sensors.md  utilities.md
docs/site/src/styles/: ironbullet.css
gui/: package-lock.json  package.json
gui/src/: app.html
gui/src/lib/: ipc.ts
gui/src/lib/components/: BlockRenderer.svelte  BlockSettingsPanel.svelte  DataPanel.svelte  DebugPanel.svelte  JobMonitor.svelte  StartupDialog.svelte  TitleBar.svelte
gui/src/lib/components/block-settings/: BrowserSettings.svelte  FunctionSettings.svelte  HttpRequestSettings.svelte  shared.ts
gui/src/lib/components/settings/: PathsSection.svelte
gui/src/lib/types/: block-settings.ts  catalog.ts  jobs.ts  pipeline.ts  runtime.ts
scripts/: build-windows-native.cmd  package-linux.sh
scripts/branding/: generate_brand_assets.py
scripts/docs/: verify_block_reference.py
sidecar/: go.sum
src/: cli.rs  debug_test.rs  main.rs
src/export/rust_codegen/: block_codegen.rs  mod.rs
src/import/: svb.rs
src/ipc/: handlers_job.rs  handlers_runner.rs  handlers_update.rs
src/pipeline/: variable.rs
src/pipeline/block/: mod.rs  settings_browser.rs  settings_functions.rs
src/pipeline/engine/: browser.rs  functions.rs  http.rs  http_tests.rs  logging.rs  mod.rs  parsers.rs  protocol.rs
src/runner/: data_pool.rs  job.rs  job_manager.rs  mod.rs  proxy_pool.rs  worker.rs
src/sidecar/: mod.rs  wreq_client.rs  xray_pool.rs
tests/: config_speed_fixture_test.rs
tools/config-speed-test/: README.md  index.html  run.ps1  sample-public-proxies.ps1  server.mjs  speed-test.rfx  test-xray-cleanup.ps1
